Explaination of italics

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
 <p>Your brain can sometimes do funny things to letters. Eulexia tries to help prevent some of these things from happening. Letters have heavy weighted bottoms to add a kind of "gravity" to each letter, helping to keep your brain from rotating them around in ways that can make them look like other letters. Consistently weighted bottoms can also help reenforce the line of text. The unique shapes of each letter can help prevent flipping and swapping.</p>
 
+<p>Eulexia also has a special italic style. Generally, italic typefaces are to be avoided for legibility reasons, especially for people with dyslexia. Because of this, Eulexia's italic styles are not your standard "slant x%" styles that most do, and instead are carefully crafted for their use to provide <i>emphasis</i> and still maintain high readability.</p>
+
 <p>For more information and other typefaces, etc, see <a href="http://abbiecod.es">http://abbiecod.es</a> or <a href="http://dyslexicfonts.com">http://dyslexicfonts.com</a></p>
 
 <p>Enjoy!</p>
